// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`arbitrary values bg-[#bada55] text-[22px] before:content-['Festivus'] 1`] = `
"<div class="bg-_hbada55_ text-_22px_ beforeccontent-_qFestivusq_">
      <!-- ... -->
    </div>"
`;

exports[`arbitrary values top-[117px] 1`] = `
"<div class="top-_117px_">
    <!-- ... -->
  </div>"
`;

exports[`arbitrary values top-[117px] lg:top-[344px] 1`] = `
"<div class="top-_117px_ lgctop-_344px_">
      <!-- ... -->
    </div>"
`;
